<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurantes</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="nombreRestauranteLbL">Name: </string>
    <string name="direccionRestauranteLbL">Address: </string>
    <string name="tipoRestauranteLbL">Type: </string>
    <string name="tipo1">Mexican </string>
    <string name="tipo2">Chinesse </string>
    <string name="tipo3">Italian </string>
    <string name="guardar">Save</string>
  
</resources>