<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.restaurantes.MainActivity" >

    <ListView
        android:id="@+id/ListaRestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/Formulario"
    />
    
    <TableLayout 
        android:id="@+id/Formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="1"
        android:shrinkColumns="1"        
    >
    
    <TableRow>
        <TextView android:text="@string/nombreRestauranteLbL" />
        <EditText android:id="@+id/nombreRestauranteTxT"/>        
    </TableRow>
     
    <TableRow>
        <TextView android:text="@string/direccionRestauranteLbL" />
        <EditText android:id="@+id/direccionRestauranteTxT"/>            
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/tipoRestauranteLbL" />
        <RadioGroup android:id="@+id/Tipos">
            <RadioButton 
                android:id="@+id/Tipo1" 
                android:text="@string/tipo1" 
                android:checked="true" 
                />
            <RadioButton android:id="@+id/Tipo2"
                android:text="@string/tipo2" />
            <RadioButton android:id="@+id/Tipo3"
                android:text="@string/tipo3" />
        </RadioGroup>           
    </TableRow>    	        
   
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="guardarOnClick"
        />
    
    </TableLayout>
    
</RelativeLayout>